Bring optimization back in

--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-intro.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-intro.mdx
@@ -25,7 +25,7 @@ Data ingest governance is the practice of ensuring optimal value for telemetry d
 This guide is built around several separate modules that can be adopted independently or as part of a complete practice.  These include:
 
 - [Baseline your ingest data](/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-baselining) - Analyze your organization's current data ingest rates.
-- Optimize your ingest data - Right-size your data ingest <font color="green"><sup>coming soon!</sup></font>
+- [Optimize your ingest data](/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-optimizing) - Right-size your data ingest
 - Forecast your ingest data - Estimate future data ingest rates <font color="green"><sup>coming soon!</sup></font>
 
 ## Desired outcomes [#desired-outcome]
