--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-intro.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-intro.mdx
@@ -66,7 +66,7 @@ Every organization will have different structure in place to manage its technolo
 <CollapserGroup>
 <Collapser
     id="stakeholders-and-participants"
-    title="Governance Team"
+    title="Stakeholders and Participants"
     >
 
 Regardless of how your organization's core teams are structured it is necessary to identify some individuals who will participate in the data governance process.  Selection of the team can be ad hoc but it should include representation from a broad enough cross section of teams so that when priorities and decisions must be made you will have the right stakeholders.  The team should have one individual who can be considered the overall observability manager.  This may be the person who manages the New Relic account or an overriding team leader responsible for the sytems and infrastructure monitored by New Relic.
@@ -75,7 +75,7 @@ Regardless of how your organization's core teams are structured it is necessary 
 
 This is the go-to person to help resolve conflicts and to communicate with upper management as needed.  When the organization contains `gray areas` of ownership leading to questions like "Who owns this Kubernetes Cluster" this individual is instrumental.
 
-### Telemetry Governance Team
+### The Governance Team
 
 The *Telemetry Manager* functions as the lead for this team.  The members of this team bring in practicial technical knowledge of the systems and services that are monitored in New Relic.  Organizationally they may be peers of the Telemetry Manager so collaboration is key.
 If you have a pre-existing structure such as an Observability Centre of Excellence (OCoE) your governance team can be comprised primarily from an existing group like the *OCoE Core Team*.
@@ -105,6 +105,9 @@ The main pillars of the governance team responsibilities are:
 - Participate in scheduled check-ins where baseline data is analyzed and compared to ingest targets.
 - Make modifications to to ingest targets as needed
 
+### The New Relic Account Team
+
+The New Relic account team may be used as a resource in your data goverance practice.  For example the Technical Account Manager (TAM) will be able to help validate your baselining efforts and to provide good recommendations when optimizing is needed.  The TAM will also keep you up on all of the latest innovations in the NR1 platform many of which may affect future instrumentation choices.  The account executive (AE) will help ensure that you have full transparency into the financial ramifications of data and user consumption.  This is an important benefit especialy to large enterprises with a complex account structure.
 
 
 </Collapser>
