--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe.mdx
@@ -20,11 +20,7 @@ redirects:
 
 Designate a few explicit roles and practices in order to ensure a level of context and accountability in your ingest planning.  At a minimum designate a *Governance Team* and schedule check-ins throughout the year to plan and adapt as needed.
 
-<CollapserGroup>
-<Collapser
-    id="stakeholders-and-participants"
-    title="Stakeholders and participants"
-    >
+## Stakeholders and participants
 
 Regardless of how your organization's teams are structured it is necessary to identify some individuals who will participate in the data governance process.  Selection of the team can be ad hoc but it should include representation from a broad enough cross section of teams so that when priorities and decisions must be made you will have the right stakeholders.  The team should have one individual who can be considered the overall observability manager.  This may be the person who manages the New Relic account or an overriding team leader responsible for the sytems and infrastructure monitored by New Relic.
 
@@ -53,11 +49,7 @@ Incorporating data governance adds the following responsibilities:
 - Participate in scheduled check-ins where baseline data is analyzed and compared to ingest targets.
 - Make modifications to to ingest targets as needed.
 
-</Collapser>
-<Collapser
-    id="timelines-and-checkins"
-    title="Timelines and check-ins"
-    >
+## Timelines and checkins
 
 Schedule data ingest governance meetings through the year to keep everyone up to date on data ingest volumes. Doing so makes data ingest governance predictable and easy to manage. 
 
@@ -85,5 +77,3 @@ Occasionally a system refactor or organizational change could lead to an unexpec
 - An acquisition of a new company leads to increase in overall telemetry volume.
 - Peak business season activity combined with some pre-peak refactors results in a higher than expected custom events volume.
 
-</Collapser>
-</CollapserGroup>
