Changed the phrase for data reduction techniques

--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-optimizing.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-optimizing.mdx
@@ -187,7 +187,7 @@ Their estate includes:
 
 <Collapser
   id="techniques-for-reduction"
-  title="Reduce Ingest Based on Your Plan"
+  title="Data Reduction Techniques to Execute Your Plan"
 >
 
 At this stage we assume you've given some good thought to all of the kinds of telemetry in your account(s) and how they relate to your value drivers.  This section will provide detailed technical instructions and examples on how to reduce a variety of telemetry types.
