--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
@@ -16,6 +16,7 @@ metaDescription: Data governance is a practice of ensuring optimal value for tel
 
 import forecasticon from './images/oma-oe-dg-forecasting-icon.png'
 import monthlyingestcheckin from './images/oma-oe-dg-monthly-ingest-checkin-icon.png'
+import adhocanomalyicon from './images/oma-oe-dg-adhoc-anomaly-icon.png'
 
 <div><img src={forecasticon} alt="Forecast" style={{ height: '76px', width: '100px', verticalAlign: 'middle', horizontalAlign: 'right'}} /></div>
 In this stage you will:
@@ -70,7 +71,7 @@ The minimal requirements for the sheet are:
 |Forecast Growth %|Directly Correlated with the ninety day target|
 |Growth Driver Notes| Explanation of any factors that would lead to expected increase or decrease in ingest|
 
-### Looking more closel at growth drivers
+### Looking more closely at growth drivers
 
 Let's look in more detail at the growth drivers for some of the teams
 
@@ -101,9 +102,17 @@ In our section on [roles and practices](/docs/new-relic-solutions/observability-
 - Is our overall organization over budget or under budget
 - Are certain sub-accounts that are serious over or under
 
-If we determine that there is a misalignment between our forecast and actual ingest target we recommend you call an *Ad Hoc Anomaly* session with your data governance team.  That is the proper former for choosing a course of action.  Fundamentally there are a handful of actions that could be warranted:
+## Anomaly resolution
+<img src={adhocanomalyicon} alt="Ad Hoc Anomaly Resolution" style={{ height: '66px', width: '75px', verticalAlign: 'middle'}} />
+
+If we determine that there is a misalignment between our forecast and actual ingest target we recommend you call an [*Ad Hoc Anomaly* session](http://localhost:8000/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#ad-hoc) with your data governance team.  That is the proper former for choosing a course of action.  Fundamentally there are a handful of actions that could be warranted:
 
 - Accept the overage as an unavoidable necessity and re-budget according
 - Work on an optimization plan to bring the excessive consumption down
 - Work out a "trade" in ingest alotments
 -- For example there may an account that is over by 1TB per month and another tha is under by a similar amount.  There may be an opportunity to swap those alotments since there is no net overage for the main account.
+
+<Callout variant='IMPORTANT' title='Your Account Team is Here to Help'>
+As always consult your New Relic account team for support early in the process and they will be able to bring expert resources to help find a suitable solution for your organization.
+</Callout>
+
