Fixed a few things

--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-forecasting.mdx
@@ -43,15 +43,15 @@ As with the previous stages in this framework we try to keep things light.  Ther
   - Detailed explanations of growth drivers that are expected to occur
 
 *Activities*
-- Yearly Ingest target planning
-- Monthly Ingest Checkin
+- [Yearly Ingest target planning](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#ingest-target)
+- [Monthly Ingest Checkin](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#check-ins)
 
 *Roles*
-- Observability Manager
-- Data Ingest Governance Team
+- [Observability Manager](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#manager)
+- [Data Ingest Governance Team](https://docs.newrelic.com/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#governance-team)
 
 
-## Developing Your Telemetry Forecast Sheet
+### Developing Your Telemetry Forecast Sheet
 In this section we'll work through an example telemetry forecast sheet and give a broad overview of the kinds of considerations that must be taken to manage data ingest in a complex organization.
 
 ![Telemetry Forecast Sheet](images/oma-oe-dg-telemetry-budget-sheet-ex.png)
@@ -95,14 +95,14 @@ Take the example of the *International Services* account in the previous budget 
 ![International Services Highlighted](images/oma-oe-dg-international-services-highlighted.png)
 
 
-## *Monthly ingest checkin*
+### *Monthly ingest checkin*
 <img src={monthlyingestcheckin} alt="Monthly Ingest Checkin" style={{ height: '66px', width: '75px', verticalAlign: 'middle'}} />
 In our section on [roles and practices](/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe) we strongly suggest periodic checkins to track ingest against your ingest targets.  In the case where you have conducted the forecasting stage.  The forecast report will be a major part of your plan.  The following questions help guide the agenda of that checkin:
 
 - Is our overall organization over budget or under budget
 - Are certain sub-accounts that are serious over or under
 
-## Anomaly resolution
+### Anomaly resolution
 <img src={adhocanomalyicon} alt="Ad Hoc Anomaly Resolution" style={{ height: '66px', width: '75px', verticalAlign: 'middle'}} />
 
 If we determine that there is a misalignment between our forecast and actual ingest target we recommend you call an [*Ad Hoc Anomaly* session](http://localhost:8000/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe#ad-hoc) with your data governance team.  That is the proper former for choosing a course of action.  Fundamentally there are a handful of actions that could be warranted:
