--- a/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe.mdx
+++ b/src/content/docs/new-relic-solutions/observability-maturity/operational-efficiency/dg-coe.mdx
@@ -38,7 +38,12 @@ Regardless of how your organization's teams are structured it is necessary to id
 
 <img src={observabilitymanager} alt="Observability Manger" style={{ height: '66px', width: '75px', verticalAlign: 'middle'}} />
 
-This is the go-to person to help resolve conflicts and to communicate with senior management as needed.  When the organization contains gray areas of ownership leading to questions like *"Who owns this kubernetes cluster?"* this individual is instrumental.
+This is the go-to person to help resolve conflicts and to communicate with senior management as needed.  When the organization contains gray areas of ownership leading to questions like *"Who owns this kubernetes cluster?"* this individual is instrumental.  The observability manager will take point whenever:
+
+- Different teams have conflicting observability objectives
+- There isn't enough obdservabilty budget to satisfy ingest goals of all teams
+- There is a need to appeal to senior management to seek out high level business goals and seek changes to budget.
+- There is a need to work with New Relic on contract terms for the upcoming year.
 
 ### The governance team [#governance-team]
 
